--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
     </section>
 
     <footer>
-        <p>Site criado por <a href="https://www.twitch.tv/sthaybucks" target="_blank">sthaybucks</a>, no curso de html e css do CursoemVideo</p>
+        <p>Site criado por Gustavo Guanabara do CursoemVideo</p>
     </footer>
 </body>
 </html>
